--- a/danssushi/contact.html
+++ b/danssushi/contact.html
@@ -199,8 +199,8 @@
               <td>
                 <b>Subscribe to our newsletter for updates and promotions!</b><br /><br />
                 <form action="https://formspree.io/f/xleopjrg" target="_blank" method="POST">
-                  <input type="text" name="name" placeholder="Name" />
-                  <input type="email" name="_replyto" placeholder="Email" />
+                  <input type="text" name="name" placeholder="Name" required />
+                  <input type="email" name="_replyto" placeholder="Email" required />
                   <input
                     type="submit"
                     style="color:black"
