--- a/danssushi/index.html
+++ b/danssushi/index.html
@@ -36,11 +36,11 @@
     <div class="header">
       <br />
       <center class="center">
-        <img src="/images/nigiri_salmon.jpg" alt="Salmon Nigiri" height="128" />
-        <img src="/images/maki_dragon.jpg" alt="Dragon Roll Maki" height="128" />
-        <img src="/images/logo.jpg" alt="logo" />
-        <img src="/images/maki_spicytuna.jpg" alt="Spicy Tuna Maki" height="128" />
-        <img src="/images/nigiri_shrimp.jpg" alt="Shrimp Nigiri" height="128" />
+        <img src="images/nigiri_salmon.jpg" alt="Salmon Nigiri" height="128" />
+        <img src="images/maki_dragon.jpg" alt="Dragon Roll Maki" height="128" />
+        <img src="images/logo.jpg" alt="logo" />
+        <img src="images/maki_spicytuna.jpg" alt="Spicy Tuna Maki" height="128" />
+        <img src="images/nigiri_shrimp.jpg" alt="Shrimp Nigiri" height="128" />
       </center>
       <center>
         <h3>
