Added new items

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="body"><p>These are my projects</p>
             <div class="flex-container">
                 <div class="flex-item"><a href="https://dwu40.github.io/danssushi/" target="_blank">Dan's Sushi</a></div>
-                <div class="flex-item"><a href="">Women Astronauts</a></div>
+                <div class="flex-item"><a href="https://dwu40.github.io/womenastronauts/">Women Astronauts</a></div>
                 <div class="flex-item">3</div>
                 <div class="flex-item">4</div>
                 <div class="flex-item">5</div>
