--- a/womenastronauts/about.html
+++ b/womenastronauts/about.html
@@ -8,7 +8,7 @@
   <body>
     <center>
       <a href="index.html">Women Astronauts</a> | <a href="honesty.html">Honesty</a>
-      <h1>About:</h1>
+      <h1>About</h1>
       <p>
         This project was created to make use of basic HTML5 that I learned in a college course. I chose the topic of Women Astronauts to promote the
         history and achievement of women in space exploration.
