--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <button class="button" type="button">About</button>
             <button class="button" type="button">Contact</button>
         </div>
-        <div class="body"><p>These are my projects</p>
+        <div class="body">
             <div class="flex-container">
                 <div class="flex-item"><a href="https://dwu40.github.io/danssushi/" target="_blank">Dan's Sushi</a></div>
                 <div class="flex-item"><a href="https://dwu40.github.io/womenastronauts/" target="_blank">Women Astronauts</a></div>
