--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             text-align: center;
             /* border: 5px solid black; */
             /* border-top: 10px solid black; */
-            border-bottom: 10px solid darkturquoise;
+            border-bottom: 10px solid lightgray;
         }
 
         .menu{
