--- a/index.html
+++ b/index.html
@@ -130,14 +130,9 @@
     <div class="grid-container">
         <div class="header"><div class="logo"><img src="images/logo.jpg" alt="logo"></div></div>
         <div class="menu">
-           <a href="https://dwu40.github.io/"><button class="button" type="button">Home</button></a>
-            <button class="button" type="button">Projects</button>
-            <button class="button" type="button">C</button>
-            <button class="button" type="button">C++</button>
-            <button class="button" type="button">JavaScript</button>
-            <button class="button" type="button">SQL</button>
-            <button class="button" type="button">About</button>
-            <button class="button" type="button">Contact</button>
+            <a href="https://dwu40.github.io/"><button class="button" type="button">Home</button></a>
+            <a href="https://dwu40.github.io/"><button class="button" type="button">About</button></a>
+            <a href="https://github.com/dwu40" target="_blank"><button class="button" type="button">GitHub</button></a>
         </div>
         <div class="body">
             <!-- <p>These are my projects</p> -->
@@ -148,7 +143,7 @@
                 <div class="flex-item">4</div>
                 <div class="flex-item">5</div>
                 <div class="flex-item">6</div>
-                <div class="flex-item">7</div>
+                <div class="flex-item">Fried Chicken</div>
                 <div class="flex-item">8</div>
                 <div class="flex-item">9</div>
             </div>
