--- a/index.html
+++ b/index.html
@@ -137,19 +137,19 @@
         <div class="body">
             <!-- <p>These are my projects</p> -->
             <div class="flex-container">
-                <div class="flex-item"><a href="https://dwu40.github.io/danssushi/" target="_blank">Dan's Sushi</a></div>
-                <div class="flex-item"><a href="https://dwu40.github.io/womenastronauts/" target="_blank">Women Astronauts</a></div>
-                <div class="flex-item">3</div>
-                <div class="flex-item">4</div>
-                <div class="flex-item">5</div>
-                <div class="flex-item">6</div>
-                <div class="flex-item">Fried Chicken</div>
-                <div class="flex-item">8</div>
-                <div class="flex-item">9</div>
+                <div class="flex-item"><a href="https://murmuring-island-44029.herokuapp.com/" target="_blank">Employee Database - Create Login or use Admin / Password (HTML, CSS, JavaScript)</a></div>
+                <div class="flex-item"><a href="https://dwu40.github.io/danssushi/" target="_blank">Dan's Sushi (HTML, CSS, JavaScript)</a></div>
+                <div class="flex-item"><a href="https://dwu40.github.io/womenastronauts/" target="_blank">Women Astronauts (HTML)</a></div>
+                <div class="flex-item">""</div>
+                <div class="flex-item">""</div>
+                <div class="flex-item">""</div>
+                <div class="flex-item">""</div>
+                <div class="flex-item">""</div>
+                <div class="flex-item">""</div>
             </div>
         </div>
         
-        <div class="footer">Goodbye</div>
+        <div class="footer">Danny Wu</div>
     </div>
     
 </body>
