--- a/index.html
+++ b/index.html
@@ -137,15 +137,15 @@
         <div class="body">
             <!-- <p>These are my projects</p> -->
             <div class="flex-container">
-                <div class="flex-item"><a href="https://murmuring-island-44029.herokuapp.com/" target="_blank">Employee Database - Create Login or use Admin / Password (HTML, CSS, JavaScript)</a></div>
+                <div class="flex-item"><a href="https://murmuring-island-44029.herokuapp.com/" target="_blank">Employee Database (HTML, CSS, JavaScript)</a></div>
                 <div class="flex-item"><a href="https://dwu40.github.io/danssushi/" target="_blank">Dan's Sushi (HTML, CSS, JavaScript)</a></div>
                 <div class="flex-item"><a href="https://dwu40.github.io/womenastronauts/" target="_blank">Women Astronauts (HTML)</a></div>
-                <div class="flex-item">""</div>
-                <div class="flex-item">""</div>
-                <div class="flex-item">""</div>
-                <div class="flex-item">""</div>
-                <div class="flex-item">""</div>
-                <div class="flex-item">""</div>
+                <div class="flex-item"></div>
+                <div class="flex-item"></div>
+                <div class="flex-item"></div>
+                <div class="flex-item"></div>
+                <div class="flex-item"></div>
+                <div class="flex-item"></div>
             </div>
         </div>
         
