--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </div>
         </div>
         
-        <div class="footer">Danny Wu</div>
+        <div class="footer">Danny W - My Portfolio</div>
     </div>
     
 </body>
