--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="header"><div class="logo"><img src="images/logo.jpg" alt="logo"></div></div>
         <div class="menu">
             <a href="https://dwu40.github.io/"><button class="button" type="button">Home</button></a>
-            <a href="https://dwu40.github.io/"><button class="button" type="button">About</button></a>
+            <a href="https://dwu40.github.io/README.md"><button class="button" type="button">About</button></a>
             <a href="https://github.com/dwu40" target="_blank"><button class="button" type="button">GitHub</button></a>
         </div>
         <div class="body">
