--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dan's Portfolio</title>
+    <title>My Portfolio</title>
 
     <style>
         .grid-container{
@@ -147,7 +147,7 @@ He is interest in data analysis, financial analysis, tax, art, literature, and l
             </div>
         </div>
         
-        <div class="footer">Danny W - My Portfolio</div>
+        <div class="footer">Danny W</div>
     </div>
     
 </body>
