--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dan's Portfolio</title>
+    <title>My Portfolio</title>
 
     <style>
         .grid-container{
@@ -148,7 +148,7 @@
             </div>
         </div>
         
-        <div class="footer">Danny W - My Portfolio</div>
+        <div class="footer">My Portfolio</div>
     </div>
     
 </body>
