--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
         </div>
         
-        <div class="footer">My Portfolio</div>
+        <div class="footer">Danny W</div>
     </div>
     
 </body>
